ssl self-signed certs added

--- a/php/etc/ssl_vhost.conf
+++ b/php/etc/ssl_vhost.conf
@@ -4,7 +4,10 @@
     DocumentRoot /var/www/html
 
     SSLEngine on
-    SSLCertificateFile /etc/apache2/crt/eermolaev_com.crt
-    SSLCertificateKeyFile /etc/apache2/crt/my.key
-    SSLCACertificateFile /etc/apache2/crt/ca.ca-bundle
+    #SSLCertificateFile /etc/apache2/crt/eermolaev_com.crt
+    #SSLCertificateKeyFile /etc/apache2/crt/my.key
+    #SSLCACertificateFile /etc/apache2/crt/ca.ca-bundle
+
+    SSLCertificateFile /etc/apache2/crt/server.crt
+    SSLCertificateKeyFile /etc/apache2/crt/server.key
 </VirtualHost>
